Fix scrolling on ios

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ html {
     scroll-behavior: smooth;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
+    height:100%
 }
 
 body {
